--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@ html{
 }
 body{
   height: 100vh;
+  max-width:100%;
+  padding: 0%;
   margin-bottom: 160;
   display: flex;
   flex-direction: column;
